<resources>
    <string name="app_name">News 360 Degree</string>
    <string name="action_insert_dummy_data">insert dummy</string>
    <string name="action_delete_all_entries">delete</string>
    <string name="india">india</string>
    <string name="india_code">in</string>
    <string name="url">url</string>
    <string name="no_url">No URL exist</string>
    <string name="retrieve">Retrieving News....</string>
    <string name="newsApi">NewsApi</string>
    <string name="network">Unable to retrieve Latest News. Check Connection</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="business_cat">business</string>
    <string name="entertainment_cat">entertainment</string>
    <string name="health_cat">health</string>
    <string name="science_cat">science</string>
    <string name="sports_cat">sports</string>
    <string name="technology_cat">technology</string>
    <string name="category">category</string>

</resources>
